[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/imgs/entities/pixie.png" type="Texture" id=1]
[ext_resource path="res://src/prefabs/player2.gd" type="Script" id=2]
[ext_resource path="res://assets/imgs/entities/light.png" type="Texture" id=3]
[ext_resource path="res://misc/advanced_pixel-7.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.34202
height = 7.19935

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -19.5882
margin_top = -22.0889
margin_right = 20.4118
margin_bottom = -6.08885
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )
texture_scale = 3.0
color = Color( 0.772549, 0.976471, 0.690196, 1 )
energy = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="time_wall" type="Timer" parent="."]

[node name="raycasts" type="Node2D" parent="."]

[node name="ray_up" type="RayCast2D" parent="raycasts"]
enabled = true
cast_to = Vector2( 7, -3 )

[node name="ray_dw" type="RayCast2D" parent="raycasts"]
enabled = true
cast_to = Vector2( 7, 3 )

[node name="ray_floor" type="RayCast2D" parent="raycasts"]
enabled = true
cast_to = Vector2( 0, 12 )
